# mmng-ui

./: .gitlab-ci.yml  CHANGELOG.md  Pipfile  README.md  pyproject.toml  tox.ini
src/mmng_ui/: pocsag.py  pocsag.tcss  reader.py
tests/: test_reader.py
