[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "mmng-ui"
dynamic = ["version"]
authors = [
    { name="Jason Lingohr", email="jason@lucid.net.au" },
]
description = "The textual user interface to multimon-ng."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "textual",
    "rich",
    "moment",
]

[project.scripts]
mmng-ui = "mmng_ui.pocsag:main"

[project.urls]
Homepage = "https://github.com/lingfish/mmng-ui"
Issues = "https://github.com/lingfish/mmng-ui/issues"

[tool.setuptools_scm]
version_file = "src/mmng_ui/_version.py"
local_scheme = "no-local-version"

[tool.pylint]
max-line-length = 120